--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,10 +1,10 @@
-db_file            "~/.config/mpd/database"
-log_file           "~/.config/mpd/log"
-music_directory    "~/Music"
-playlist_directory "~/.config/mpd/playlists"
-pid_file           "~/.config/mpd/pid"
-state_file         "~/.config/mpd/state"
-sticker_file       "~/.config/mpd/sticker.sql"
+db_file            "/home/sitheris/.config/mpd/database"
+log_file           "/home/sitheris/.config/mpd/log"
+music_directory    "/home/sitheris/Storage/Music/FLAC"
+playlist_directory "/home/sitheris/.config/mpd/playlists"
+pid_file           "/home/sitheris/.config/mpd/pid"
+state_file         "/home/sitheris/.config/mpd/state"
+sticker_file       "/home/sitheris/.config/mpd/sticker.sql"
 
 auto_update "yes"
 
@@ -16,11 +16,4 @@ audio_output {
       type  "pulse"
       name  "pulse audio"
       mixer_type "software"
-}
-
-audio_output {
-type               "fifo"
-name               "toggle_visualizer"
-path               "/tmp/mpd.fifo"
-format             "44100:16:2"
 }
