--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -11,26 +11,26 @@
 ## ncmpcpp.
 ##
 #
-ncmpcpp_directory = ~/.config/ncmpcpp
+ncmpcpp_directory = "~/.config/ncmpcpp"
 #
 ##
 ## Directory for storing downloaded lyrics. It defaults to ~/.lyrics since other
 ## MPD clients (eg. ncmpc) also use that location.
 ##
 #
-lyrics_directory = ~/.config/lyrics
+lyrics_directory = "~/.config/lyrics"
 #
 ##### connection settings #####
 #
-#mpd_host = localhost
+mpd_host = localhost
 #
-#mpd_port = 6600
+mpd_port = 6600
 #
-#mpd_connection_timeout = 5
+mpd_connection_timeout = 5
 #
 ## Needed for tag editor and file operations to work.
 ##
-mpd_music_dir = "~/Music"
+mpd_music_dir = "/home/sitheris/Storage/Music/FLAC"
 #
 #mpd_crossfade_time = 5
 #
